Update: - Added Playlist system and volume - Modified some things in guis - Deleted useless things